Created first TextBoxTests.java autotests and CssXpathExamples.java

--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,12 @@ repositories {
 
 dependencies {
     testImplementation(
-
+            "com.codeborne:selenide:7.1.0",
+            "org.junit.jupiter:junit-jupiter:5.10.2",
+            "org.slf4j:slf4j-simple:2.0.13"
     )
+}
+
+test {
+    useJUnitPlatform()
 }
